PROJECT(DPAD)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR "ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
ADD_EXECUTABLE(DPAD DPAD.cxx itkDPADNDThomasFilter.txx itkDPAD1DThomasFilter.txx itkDPADFilter.txx itkComputeDiffusionTermFilter.txx itkDirectionalRectangularSmoothFilter.txx itkCoefficientOfVariationToDiffusionTerm.txx itkComputeCoefficientOfVariation.txx itkForwardDifferencesFilter.txx itkD1ForwardDifferencesFilter.txx)
TARGET_LINK_LIBRARIES(DPAD ITKCommon ITKIO ITKNumerics ITKBasicFilters)
