PROJECT(SRAD)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR "ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
ADD_EXECUTABLE(SRAD SRAD.cxx itkSRADNDThomasFilter.txx itkSRADFilter.txx itkSRADDiffusionTensorFilter.txx itkScaleGrayLevelFilter.txx)
TARGET_LINK_LIBRARIES(SRAD ITKCommon ITKIO ITKNumerics ITKBasicFilters)
